add some documentation and unit tests